feat: add connection import endpoint (#538)
* feat: add connection import endpoint

* feat: show app_id on integration dashboard
